Fixed responsive design for checkout on small devices

--- a/src/style/CheckoutProduct.css
+++ b/src/style/CheckoutProduct.css
@@ -5,7 +5,7 @@
 
 .content {
     display: grid;
-    grid-template-columns: 1fr 1fr 2fr 1fr 1fr 1fr;
+    grid-template-columns: 2fr 5fr;
     align-items: center;
     margin: 0px 7rem;
     margin-top: 1rem;
@@ -13,7 +13,7 @@
 
 @media (max-width: 900px) and (min-width:430px) {
     .content {
-        margin: 0;
+        margin: 0px 1rem;
         margin-top: 1rem;
     }
 }
@@ -21,8 +21,19 @@
 @media (max-width: 430px) {
     .content {
         display: flex;
-        flex-direction: column;
         gap: 20px;
+    }
+
+    .product-info {
+        display: flex !important;
+        flex-direction: column;
+        align-items: flex-start !important;
+        gap: 5px;
+        
+    }
+
+    .product-line {
+        align-items: center;
     }
 }
 
@@ -48,4 +59,19 @@
 
 .delete-btn:hover {
     background-color: rgba(211, 211, 211, 0.506);
+}
+
+.img-div {
+    display: flex;
+    align-items: center;
+}
+
+.product-info {
+    display: grid;
+    grid-template-columns: 2fr 1fr 1fr 1fr;
+    align-items: center;
+}
+
+.del-btn-container {
+    padding-right: 2vw;
 }
